lecture 1 tweak and config update

--- a/lectures/iter1/01_welcome.md.erb
+++ b/lectures/iter1/01_welcome.md.erb
@@ -8,8 +8,7 @@ type: page
 
 1.  Why are you taking this class? Why are you getting a COSI degree? What do you see yourself doing after graduating? What are the top three things that you hope for this class?
 
-	* *Please give this a little thought. It will become important when I challenge you to come up with a product or service idea. It will also be important to me to understand how to @lead the class. Submit this as a  post on Piazza.*
-	* <%= deliverable "No more than 1 page, as an email to pitosalas@gmail.com" %>
+	* *Please give this a little thought. It will become important when I challenge you to come up with a product or service idea. It will also be important to me to understand how to @lead the class.* <%= deliverable "No more than 1 page, as a post to piazza" %>
 1. Study the requirements for the programming assignments: <%= link_to_pa :intro_pa %>. Also read closely the assignment for <%= link_to_pa :PA1 %>. Come ready to discuss the approach you will take in class.
 
 ##### Introductions
@@ -24,17 +23,22 @@ type: page
 * <%= discussion "How is it diffent (or is it different) from Computer Science?" %>
 * <%= link_to_background :learning_objectives %>
 
-##### Programming Assignments
-* Answer questions about programming assignments - see <%= link_to_pa :intro_pa %>
-* Review exactly what <%= link_to_pa :PA1 %> is about. Answer questions.
-
 ##### Overview and course web site
 
 * How will the whole term work?
-* Let's look at the <%= link_to_background :term_overview %>
+* Let's look at the <%= link_to_background :term_overview %> 
 * How will the lab work? Does it have it's own grade?
 * How will the projects work? <%= link_to_background :project_process %>@
 * Let's look at the <%= link_to_background :grading %>
+
+##### Exercise
+* Pair up with person next to you
+* Look through the whole course web site and discuss it with your partner
+* Each pair asks a question about the curriculum or anything else.
+
+##### Programming Assignments
+* Answer questions about programming assignments - see <%= link_to_pa :intro_pa %>
+* Review exactly what <%= link_to_pa :PA1 %> is about. Answer questions.
 
 ##### Next class
 * Look at homework: <%= link_to_section :lab, :lab_setup %>
