work on first three lectures

--- a/background/06_grading.md.erb
+++ b/background/06_grading.md.erb
@@ -6,9 +6,9 @@ type: page
 
 * Activities that count towards the grade are rated as follows:
 	* Check - "as expected"
-	* Check Plus - "nice job!"
-	* Check Double Plus - "wow! few students reach this level!"
-	* Check Minus - "Disappointing"
+	* Check-Plus - "nice job!"
+	* Check-Double Plus - "wow! few students reach this level!"
+	* Check-Minus - "Disappointing"
 * These are combined by mathematical formula into an overall score betwen 1 and 100
 * At the end of the term, the mapping of the overall score to a grade is determined
 * All activities that count towards your grade will be clearly designated when assigned
