--- a/background/11_se_practices.md.erb
+++ b/background/11_se_practices.md.erb
@@ -4,11 +4,41 @@ type: page
 ---
 This page outlines the Software Engineering practices that you will be required to learn and follow for this course.
 
+##### General Software Engineering Practices
+
+1. Use intention-revealing names
+
+1. Comment, modestly
+
+1. Using codeclimate.com to get automated static analysis of your github code
+
+1. Automated Unit Testing: All models, validations will have unit tests.
+
+##### Source Code Management
+
 1. Source Code Management: Each student has a private Github repository and each team has a team Github repository. All coding assignments are submitted through Github.
 
-1. Authomated Code review: Using codeclimate.com. Every application or homework is submitted to Github.
+1. Every application or homework should be submitted with Github.
 
-1. Automated Unit Testing: All models, validations wil have unit tests.
+1. Each separate "program" or "assignment" or "project" is stored in a **separate** directory, and a **separate** github repository.
 
-1. Code structure and design: All code written should follow, minimally, Sandy Metz' simple rules.
+##### Ruby Programming
 
+1. Use no $global variables
+
+1. No methods longer than 12 lines
+
+1. No classes longer than 100 lines of code
+
+1. No more than four parameters in a method
+
+1. No top level methods (i.e. methods not part of a class)
+
+1. Capitalize, camel case Class names, e.g. CylinderBlock
+
+1. Variables are all lowercase, with _ to break words, "Snake Case", e.g. initial_speed
+
+1. Contants are all UPPERCASE
+
+
+#### Following these practices is part of your grade :)
