--- a/lectures/iter1/02_ruby.md.erb
+++ b/lectures/iter1/02_ruby.md.erb
@@ -1,14 +1,21 @@
 ---
-title: Ruby and Projects
+title: Ruby Part One
 type: page
 ---
-#### Homework Due For Today
+##### Homework Due For Today
+* Learn about Git and Github, create your personal github account
+* Continue working on <%= link_to_pa :PA1 %>
+* <%= deliverable "Check in your PA1 so far into Github" %>
 
-#### Putting together teams
 
-To help in organizing the teams, I am asking everyone to *really quickly* Fill in [Skills Inventory](https://docs.google.com/spreadsheet/ccc?key=0Avr8qvL1EWecdENZQkpxQ2V2dEVjbjNaS3NzRjZ0UGc#gid=0). Obviously this is not graded. The purpose is to help us put together good teams. **Do it now please**
+##### Putting together teams
 
-#### Working in teams
+To help in organizing the teams, I am asking everyone to *really quickly* Fill in [Skills Inventory](https://docs.google.com/spreadsheet/ccc?key=0Avr8qvL1EWecdENZQkpxQ2V2dEVjbjNaS3NzRjZ0UGc#gid=0). (This page is protected until the day of class) Obviously this is not graded. The purpose is to help us put together good teams. **Do it now please**
+
+* How will the projects work? <%= link_to_background :project_process %>
+
+
+##### Working in teams
 
 * Working in teams can suddenly become CHALLENGING
 * You are not trying to become best friends, you are trying to get something done
