--- a/lectures/iter1/03_ruby2.md.erb
+++ b/lectures/iter1/03_ruby2.md.erb
@@ -5,7 +5,12 @@ type: page
 #### Homework for today
 * Read [Sandy Metz's Rules](http://robots.thoughtbot.com/sandi-metz-rules-for-developers). Be ready to explain them in class.
 * Read Chapter 4 (Introduction to Ruby) in AWDR. It will be a good review of what you've worked on so far. I am sure you will find some new insights and goodies there. Try out code examples from the book. 
+* Research what Ruby Gems are. Experiment with some code. Research Bundler (a ruby utilty.) Experiment with it. <%= deliverable "Write a blog post explaining what you learned."
 
+##### Ruby Gems
+* Package Management
+* Ruby Gems
+* Ruby Bundler
 
 ##### Programming Assignments
 * Discuss PA1
@@ -22,10 +27,4 @@ type: page
 	* Instances
 	* Duck Typing
 
-* Sandy Metz's rules
-
 * Look at [Sandy Metz's Rules](http://robots.thoughtbot.com/sandi-metz-rules-for-developers)
-	* Classes can be no longer than one hundred lines of code.
-	* Methods can be no longer than five lines of code.
-	* Pass no more than four parameters into a method. Hash options are parameters.
-	* For Rails: Controllers can instantiate only one object. Therefore, views can only know about one instance variable and views should only send messages to that object (@object.collaborator.value is not allowed).
