--- a/lectures/iter1/01_welcome.md.erb
+++ b/lectures/iter1/01_welcome.md.erb
@@ -27,8 +27,7 @@ type: page
 
 * How will the whole term work?
 * Let's look at the <%= link_to_background :term_overview %> 
-* How will the lab work? Does it have it's own grade?
-* How will the projects work? <%= link_to_background :project_process %>@
+* How will the lab work? Does it have it's own grade? <%= link_to_background :lab_overview %>
 * Let's look at the <%= link_to_background :grading %>
 
 ##### Exercise
@@ -41,4 +40,4 @@ type: page
 * Review exactly what <%= link_to_pa :PA1 %> is about. Answer questions.
 
 ##### Next class
-* Look at homework: <%= link_to_section :lab, :lab_setup %>
+* Look at homework: <%= link_to_lecture :ruby %>
