add affective tutor and dkb

--- a/incubator/03_carpediem.md.erb
+++ b/incubator/03_carpediem.md.erb
@@ -1,9 +1,7 @@
 ---
-title: Option - Carpe Diem
+title: Option - Carpe Diem - Seiz the day
 type: page
 ---
-### Carpe Diem: "Seize the Day"
-
 * **Proposer**: Pito Salas
 
 * **Product name**: Carpe Diem
