add PA2, update ruby script tutorials

--- a/lab/01_lab_setup.md.erb
+++ b/lab/01_lab_setup.md.erb
@@ -7,7 +7,7 @@ type: page
 * Begin work on <%= link_to_pa :PA1 %>. Bring in as much as you have so far.
 
 ##### Lab Objectives
-* Setup the VM
+* Setup and play and get used Vagrant
 * Create a Github account and experiment
 	* ONE subdirectory per project!
 	* Git init the subdir
