--- a/lectures/iter1/02_ruby.md.erb
+++ b/lectures/iter1/02_ruby.md.erb
@@ -26,4 +26,4 @@ To help in organizing the teams, I am asking everyone to *really quickly* Fill i
 
 #### Ruby Live Coding Demonstration and discussion
 
-<%= include_ruby_code :ruby_introduction %>
+<%= include_ruby_code :intro_tut %>
