--- a/pa/02_PA1.md.erb
+++ b/pa/02_PA1.md.erb
@@ -1,9 +1,7 @@
 ---
-title: PA 1
+title: PA 1 - Programming Assignment 1
 type: page
 ---
-#### PA1: Programming Assignment 1
-
 Social networking-based webapps often collect a huge amount of information about the members of the community.  One of the most exciting developments in the past decade has been the development of tools for analyzing this data to provide value for the community.  For this assignment, you are to write a ruby program that reads in a large data set and produces some analysis.  
 
 ##### Data
