--- a/lectures/iter1/03_ruby2.md.erb
+++ b/lectures/iter1/03_ruby2.md.erb
@@ -5,7 +5,7 @@ type: page
 #### Homework for today
 * Read [Sandy Metz's Rules](http://robots.thoughtbot.com/sandi-metz-rules-for-developers). Be ready to explain them in class.
 * Read Chapter 4 (Introduction to Ruby) in AWDR. It will be a good review of what you've worked on so far. I am sure you will find some new insights and goodies there. Try out code examples from the book. 
-* Research what Ruby Gems are. Experiment with some code. Research Bundler (a ruby utilty.) Experiment with it. <%= deliverable "Write a blog post explaining what you learned."
+* Research what Ruby Gems are. Experiment with some code. Research Bundler (a ruby utilty.) Experiment with it. <%= deliverable "Write a blog post explaining what you learned." %>
 
 ##### Ruby Gems
 * Package Management
@@ -13,18 +13,11 @@ type: page
 * Ruby Bundler
 
 ##### Programming Assignments
-* Discuss PA1
-* Introduce PA2
+* Discuss <%= link_to_pa :PA1 %>
+* Introduce <%= link_to_pa :PA2 %>
 
-##### Ruby Highlights
+#### Ruby Live Coding Demonstration and discussion
 
-* Key things to show about Ruby
-* Basic OO design
-* OO Lingo
-	* Objects
-	* Classes
-	* Methods
-	* Instances
-	* Duck Typing
+<%= include_ruby_code :classes_tut %>
 
 * Look at [Sandy Metz's Rules](http://robots.thoughtbot.com/sandi-metz-rules-for-developers)
