adding more lectures

--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -5,6 +5,9 @@ type: page
 #### Links of Interest ####
 
 * [ORM Hate (Martin Fowler)](http://martinfowler.com/bliki/OrmHate.html)
-* [Using RVM to manage rubies](http://robots.thoughtbot.com/using-rbenv-to-manage-rubies-and-gems/)
 * [Git Tutorials](http://net.tutsplus.com/?s=git)
 * [Shell Tutorial](http://net.tutsplus.com/?s=terminal)
+* [Ruby Idioms](https://code.google.com/p/tokland/wiki/RubyIdioms)
+* [Rubular for Regular Expressions](http://rubular.com)
+* [Architecture, The Lost Years](https://www.youtube.com/watch?v=WpkDN78P884&feature=player_embedded)
+* [Rails Guide about Routing](http://guides.rubyonrails.org/routing.html)
