--- a/background/10_project_process.md.erb
+++ b/background/10_project_process.md.erb
@@ -3,12 +3,14 @@ title: How Projects Work
 type: page
 ---
 ##### Products
+
 * For this class we focus on database backed web appications
-* Discuss the available projects
-* Indicate first and second choice
+* Implemented with Ruby and RoR (+ other technologies)
+* Target 
 
 ##### Teams
-* Form teams of 4 students (no less no more)
+
+* We will form teams of 4 students (no less no more!)
 * Think **roughly** about roles:
 	* Models/Databases/Authentication/Authorization/
 	* User interface/HTML/CSS/JS/UX/Mpbile
