--- a/lectures/iter1/02_ruby.md.erb
+++ b/lectures/iter1/02_ruby.md.erb
@@ -14,7 +14,6 @@ To help in organizing the teams, I am asking everyone to *really quickly* Fill i
 
 * How will the projects work? <%= link_to_background :project_process %>
 
-
 ##### Working in teams
 
 * Working in teams can suddenly become CHALLENGING
@@ -24,6 +23,9 @@ To help in organizing the teams, I am asking everyone to *really quickly* Fill i
 * Triangle Exercise
 * Discussion about teams
 
-#### Ruby Live Coding Demonstration and discussion
-
+#### Ruby Live Coding Demonstration
+ 
 <%= include_ruby_code :intro_tut %>
+
+#### Next Class
+* Look at homework: <%= link_to_lecture :ruby2 %> 
