--- a/lectures/iter1/03_ruby2.md.erb
+++ b/lectures/iter1/03_ruby2.md.erb
@@ -3,9 +3,9 @@ title: More Ruby
 type: page
 ---
 #### Homework for today
-* Read [Sandy Metz's Rules](http://robots.thoughtbot.com/sandi-metz-rules-for-developers). Be ready to explain them in class.
 * Read Chapter 4 (Introduction to Ruby) in AWDR. It will be a good review of what you've worked on so far. I am sure you will find some new insights and goodies there. Try out code examples from the book. 
 * Research what Ruby Gems are. Experiment with some code. Research Bundler (a ruby utilty.) Experiment with it. <%= deliverable "Write a blog post explaining what you learned." %>
+* Complete <%= link_to_pa :PA1 %>.
 
 ##### Ruby Gems
 * Package Management
@@ -20,4 +20,5 @@ type: page
 
 <%= include_ruby_code :classes_tut %>
 
-* Look at [Sandy Metz's Rules](http://robots.thoughtbot.com/sandi-metz-rules-for-developers)
+#### Next Class
+* Look at homework: <%= link_to_lecture :project_select %> 
