--- a/lectures/iter1/04_project_select.md.erb
+++ b/lectures/iter1/04_project_select.md.erb
@@ -3,10 +3,20 @@ title: Project Selection
 type: page
 ---
 ##### Homework for today's lecture
-* Pick your top 3 options for a project to work on
-##### Project Selection
+* Read [Sandy Metz's Rules](http://robots.thoughtbot.com/sandi-metz-rules-for-developers). 
+<%= deliverable "Write a blog post reflecting on them, and whether plan to adopt them rigorously (and why)." %>
+* Look through and think about the Product Options that are available. Remember the caveat: Don't set the bar at "this is the most wonderful product idea I ever saw". Set it at "this is a product that could be interesting to develop and work on." <%= deliverable "A blog post with your top 3" %>
+
+##### Product Discussion
+* Sales pitches for products
+* How close to the writeup will the product have to be?
+* Do we have to use ruby on rails? (yes)
+
+##### Team Discussion
+* Review <%= link_to_background :project_process %>
+* <%= link_to_topic :working_in_teams %>
 * Teams will be 4 people (rounding as needed)
-* Project Selection
-	* We go over the top projects and describe them
-	
+
+#### Next Class
+* Look at homework: <%= link_to_lecture :url_intro %> 
 
