--- a/pa/02_PA1.md.erb
+++ b/pa/02_PA1.md.erb
@@ -32,8 +32,7 @@ More information about the users and movies can be found in other files, but you
 
 ##### Deliverable
 
-* create a folder: PA1 containing
-	* the movie_data.rb code 
+* <%= deliverable "upload a repo to your github account containing" %>
+	* the movie_data.rb source code 
 	* a transcript of running your code and generating the first and last ten elements of popularity list and most_similar(1)
-	* upload the folder to your github account
-	* create a screenrecording showing you running the script in movie_data.rb
+* <%= deliverable "a screenrecording showing you running the script in movie_data.rb" %>
