--- a/lab/01_lab_setup.md.erb
+++ b/lab/01_lab_setup.md.erb
@@ -3,7 +3,10 @@ title: Setup Lab
 type: page
 ---
 ##### Homework required for this lab
-* Learn Git and Github. I suggest reading Chapter 1 and 2 of [The Git Book](http://git-scm.com/book). Also take a look at our own <%= link_to_cribsheet :git %>. You will find helpful info and several other links.
+* Setup and configure your Vagrant shell: <%= link_to_cribsheet :vagrant_setup %>
+* Learn Git and Github. I suggest reading Chapter 1 and 2 of [The Git Book](http://git-scm.com/book). 
+* Also take a look at our own <%= link_to_cribsheet :git %>. You will find helpful info and several other links.
+* Practice your Unix command line: <%= link_to_cribsheet :unix_shell %>
 * Begin work on <%= link_to_pa :PA1 %>. Bring in as much as you have so far.
 
 ##### Lab Objectives
