--- a/lab/02_lab_install.md.erb
+++ b/lab/02_lab_install.md.erb
@@ -2,6 +2,10 @@
 title: Install Lab
 type: page
 ---
-* Review PA1
-* Introduce PA2
+##### Homework required for this lab
+* You must have your Vagrant VM, Ruby and Rails working by now. Get help if you don't
+* Read AWDR Chapter 1, although the VM will have everything set up for you
+
+##### In Lab
 * Install and do Hello World with Rails
+* Play around with it
