--- a/lectures/iter1/01_welcome.md.erb
+++ b/lectures/iter1/01_welcome.md.erb
@@ -12,8 +12,8 @@ type: page
 1. Study the requirements for the programming assignments: <%= link_to_pa :intro_pa %>. Also read closely the assignment for <%= link_to_pa :PA1 %>. Come ready to discuss the approach you will take in class.
 
 ##### Introductions
-
-* Introduce Pito, where I came from, and why I am excitied about this course.
+ 
+* Introduce Pito, where I came from, and why I am excitied about this course. Look at <%= link_to_background :pitofaq %>
 * Go around and introduce yourself: name, year, why you are here. Point to next person.
 * Mugshots are collected!
 
@@ -25,8 +25,7 @@ type: page
 
 ##### Overview and course web site
 
-* How will the whole term work?
-* Let's look at the <%= link_to_background :term_overview %> 
+* How will the whole term work? Let's look at the <%= link_to_background :term_overview %> 
 * How will the lab work? Does it have it's own grade? <%= link_to_background :lab_overview %>
 * Let's look at the <%= link_to_background :grading %>
 
