--- a/lectures/iter1/05_url_intro.md.erb
+++ b/lectures/iter1/05_url_intro.md.erb
@@ -2,97 +2,23 @@
 title: The Web, URLs and Routing
 type: page
 ---
-##### Homework due for today
+#### Homework due for today
 
 * How does a browser process a URL? When I type http://www.salas.com:8080/toplevel?p=1 what happens inside the browser, what actions does it take, what messages does it send out, what messages does it receive? 
   <%= deliverable "Research this on the web or in books and come up with a numbered list of actions, with each step in the list being a link to a source on the web that you used to figure that out." %>
 
-##### Discussion
+#### Discussion
 * Go around room, and each student says the next step in the process
 
-##### The World Wide Web
+<%= include_topic :www %>
 
-* 3 critical protocols or formats
-  * HTTP - Hyptertext Transfer ProtocolP
-  * URI - Universal Resource Identifier
-  * HTML - Hypertext Markup Language
+#### The Job of the Rails Server
 
-* Actually there are a bunch more that are almost as important
-  * CSS - Cascading Style Sheets
-  * JS (or ECMA) - Javascript
-  * More?
+* Simply to accept HTTP requests
+* Decode them ("routing")
+* Generate the necessary HTML ("views")
+* Return the html as a response to the request ("Controller")
 
-* All this is based on foundational Internet protocols
-  * TCP/IP
-  * DNS
-
-* Dissecting the URL
-  * Protocol
-  * Host Name (see also: domain name, subdomain name)
-  * Port (default for http is 80)
-  * Path 
-  * Parameters
-
-* HTTP Protocol
-  * Client makes a request (a packet is sent)
-  * Server Responds to the request (a packet is sent back)
-  * URL is on the "envelope" of the request
-  * Stateless
-
-* HTTP Requests contain:
-  * Request "method"
-  * URL
-    * Host name
-    * Path
-    * Parameters
-  * Request Headers
-
-* HTTP Responses contain
-  * Status code
-  * Response headers:
-    * Content-type
-    * Content-length
-    * Lots of other stuff
-  
-##### Understanding this is critical!
-
-###### Use Telnet to experiment with TCP/IP
-  * TCP/IP sends and receives 'text' protocols
-  * The command line indicates the target host and port
-  * Then you can type in the message
-
-> 
-    telnet example.com 80
-    GET /index.html HTTP/1.1
-    Host: www.example.com
-
-###### Use an app to visualize HTTP
-  * Mac only: [Rested](http://www.helloresolven.com/portfolio/rested/)
-  * Other platforms: [rest-client](https://code.google.com/p/rest-client/)
-  * Mac version of [rest-client](https://github.com/mmattozzi/cocoa-rest-client)
-
-##### Review: What does TCP/IP do?
-  * Sends a 'message' from one computer to another (often message is text)
-  * Destination computer is designated by a host or domain name
-  * Destination within the computer is designated by a port number
-  * The format or Interpretation of the 'message' is determined by the port
-  * Usually port 80 messages are interpretted as HTTP
-
-##### Review: What does HTTP do?
-  * Expects a "request" message which is answered by a "response"
-  * Request message
-    * Defines a "method"
-    * Defines the "path"
-    * Supplies information about the format and lots of other stuff
-  * Response message
-    * Defines a status code
-    * Defines format of the response
-    * Defines the response body
-
-
-
-
-
-
-
+#### Next Class
+* Look at homework: <%= link_to_lecture :rails_intro %> 
 
