add PA3, work on lectures 1-05, 1-06, 2-01

--- a/background/10_project_process.md.erb
+++ b/background/10_project_process.md.erb
@@ -6,7 +6,6 @@ type: page
 
 * For this class we focus on database backed web appications
 * Implemented with Ruby and RoR (+ other technologies)
-* Target 
 
 ##### Teams
 
@@ -16,3 +15,8 @@ type: page
 	* User interface/HTML/CSS/JS/UX/Mpbile
 	* Interactions/Controllers
 	* Web Services/Deployment/System integration/Testing
+
+#### How we will run our projects
+* Look at <%= link_to_topic :agile_development %>
+
+<%= include_topic :agile_projects_intro %>
