--- a/lab/02_lab_install.md.erb
+++ b/lab/02_lab_install.md.erb
@@ -6,6 +6,9 @@ type: page
 * You must have your Vagrant VM, Ruby and Rails working by now. Get help if you don't
 * Read AWDR Chapter 1, although the VM will have everything set up for you
 
-##### In Lab
+##### Lab Objectives
+* Product Selection discussion and preliminary choosing of teams
+^
 * Install and do Hello World with Rails
 * Play around with it
+* PA1 and PA2
