--- a/lectures/iter1/04_project_select.md.erb
+++ b/lectures/iter1/04_project_select.md.erb
@@ -3,9 +3,8 @@ title: Project Selection
 type: page
 ---
 ##### Homework for today's lecture
-* Read [Sandy Metz's Rules](http://robots.thoughtbot.com/sandi-metz-rules-for-developers). 
-<%= deliverable "Write a blog post reflecting on them, and whether plan to adopt them rigorously (and why)." %>
 * Look through and think about the Product Options that are available. Remember the caveat: Don't set the bar at "this is the most wonderful product idea I ever saw". Set it at "this is a product that could be interesting to develop and work on." <%= deliverable "A blog post with your top 3" %>
+* <%= deliverable "Check in your PA2 so far into Github" %>
 
 ##### Product Discussion
 * Sales pitches for products
