--- a/lectures/iter2/02_db_design.md.erb
+++ b/lectures/iter2/02_db_design.md.erb
@@ -1,15 +1,24 @@
 ---
-title: Object Relational Mapping
+title: Database Design
 type: page
 ---
 ##### Homework due for today
-* Read and understand Martin Fowler's [ORM Hate](http://martinfowler.com/bliki/OrmHate.html)
+* Read and and try to understand Martin Fowler's [ORM Hate](http://martinfowler.com/bliki/OrmHate.html)
 * Do research on the "Active Record Pattern". Here are some links to start with
 	* Martin Fowler's [Active Record Pattern](http://www.martinfowler.com/eaaCatalog/activeRecord.html)
 	* [Wikipedia on ActiveRecord](http://en.wikipedia.org/wiki/Active_record_pattern)
+* Product Teams: develop preliminary schema for your product. <%= team_deliverable "Detailed initial schema for your product. Any form you want." %>
+* Complete and hand submit Programming Assignment 3 (<%= link_to_pa :PA3 %>)
+
 ##### Object Relational Mapping
+
 * "Impendance misatch"
 * Different approaches
 * Key question is how you correlate the tables in a database with the attributes of a class
 * The "ActiveRecord" Object Oriented Pattern
 
+##### Relational Databases
+
+* How Relational Databases work
+* Tables, Columns, Databases, Joins
+* Look at a real example
