--- a/lectures/iter1/03_ruby2.md.erb
+++ b/lectures/iter1/03_ruby2.md.erb
@@ -5,7 +5,7 @@ type: page
 #### Homework for today
 * Read Chapter 4 (Introduction to Ruby) in AWDR. It will be a good review of what you've worked on so far. I am sure you will find some new insights and goodies there. Try out code examples from the book. 
 * Research what Ruby Gems are. Experiment with some code. Research Bundler (a ruby utilty.) Experiment with it. <%= deliverable "Write a blog post explaining what you learned." %>
-* Complete <%= link_to_pa :PA1 %>.
+* <%= deliverable "Programming Assignment 1" %> L(ook at <%= link_to_pa :PA1 %> for details)
 
 ##### Ruby Gems
 * Package Management
