--- a/lectures/iter1/05_url_intro.md.erb
+++ b/lectures/iter1/05_url_intro.md.erb
@@ -6,9 +6,11 @@ type: page
 
 * How does a browser process a URL? When I type http://www.salas.com:8080/toplevel?p=1 what happens inside the browser, what actions does it take, what messages does it send out, what messages does it receive? 
   <%= deliverable "Research this on the web or in books and come up with a numbered list of actions, with each step in the list being a link to a source on the web that you used to figure that out." %>
+* Meet outside of class for 1 hour with 3 other students, look through and discuss the project options. Discuss discuss discuss.
+* <%= deliverable "Programming Assignment 2" %> (Look at <%= link_to_pa :PA2 %> for details)
 
 #### Discussion
-* Go around room, and each student says the next step in the process
+* Go around room, and each student says the next step of URL processing.
 
 <%= include_topic :www %>
 
@@ -20,5 +22,5 @@ type: page
 * Return the html as a response to the request ("Controller")
 
 #### Next Class
-* Look at homework: <%= link_to_lecture :rails_intro %> 
+* Look at homework: <%= link_to_lecture :iter1_done %> 
 
