--- a/lectures/iter2/06_web_services.md.erb
+++ b/lectures/iter2/06_web_services.md.erb
@@ -3,7 +3,8 @@ title: Web Services
 type: page
 ---
 ##### Homework due for today's class
-* Read
+* Read [Sandy Metz's Rules](http://robots.thoughtbot.com/sandi-metz-rules-for-developers). 
+<%= deliverable "Write a blog post reflecting on them, and whether plan to adopt them rigorously (and why or why not)." %>
 
 ##### Web Services
 * The *WEB* as a big operating system
