--- a/background/06_grading.md.erb
+++ b/background/06_grading.md.erb
@@ -21,14 +21,15 @@ type: page
 	* Do you help the class move forward and stay focused?
 
 * **Blog Post and similar homework:** Up to 10 points
-	* Is your homework thoughtful, comprehensive and correct, or does it look rushed and perfunctory?
+	* Is your homework thoughtful? comprehensive and correct?
+	* Or, does it look rushed and perfunctory?
 
 * **Team Work:** Up to 20 points
 	* Do you contribute personally to your team?
 	* Are you a positive influence on productivity?
 	* Do your team mates like working with you?
 	* Are you at the center of problems or of solutions?
-	* 3 components: peer, self, instructor
+	* **3 components: peer, self, instructor**
 
 * **Programming Assignments**: Up to 20 points (Individual PA's as 
 	* Does the program work?
@@ -42,3 +43,8 @@ type: page
 	* Does it represent good software engineering practices?
 	* Can you explain how it works?
 	* Did you go well beyond the basic Rails structures that you learned in class and discover and apply new techniques, tools, technologies?
+
+* **Extra Credit:** Up to 10 points (over 100)
+	* Ask me if you want to do an extra credit assignment
+	* Any time until 2 weeks before the end of the course
+	* Note: it's easier to push your grade up by doingn well on the core assignments
