add to lab, and new vaperater images

--- a/incubator/04_vaperater.md.erb
+++ b/incubator/04_vaperater.md.erb
@@ -109,4 +109,11 @@ type: page
 * Compatible BW
 	* Battery Id
 	* Wick Id
+
+#### Appendix 2: Paper Prototypes
+
+<%= include_image "VapeRaterHome.png" %>
+<%= include_image "CompatibilityChecker.png" %>
+
+
 	
