--- a/lab/01_lab_setup.md.erb
+++ b/lab/01_lab_setup.md.erb
@@ -11,6 +11,7 @@ type: page
 
 ##### Lab Objectives
 * Setup and play and get used Vagrant
+* Play and learn about using the unix command line
 * Create a Github account and experiment
 	* ONE subdirectory per project!
 	* Git init the subdir
