--- a/lectures/iter1/02_ruby.md.erb
+++ b/lectures/iter1/02_ruby.md.erb
@@ -2,19 +2,19 @@
 title: Ruby Part One
 type: page
 ---
-##### Homework Due For Today
+#### Homework Due For Today
 * Learn about Git and Github, create your personal github account
 * Continue working on <%= link_to_pa :PA1 %>
 * <%= deliverable "Check in your PA1 so far into Github" %>
 
+#### Overview and course web site
 
-##### Putting together teams
-
-To help in organizing the teams, I am asking everyone to *really quickly* Fill in [Skills Inventory](https://docs.google.com/spreadsheet/ccc?key=0Avr8qvL1EWecdENZQkpxQ2V2dEVjbjNaS3NzRjZ0UGc#gid=0). (This page is protected until the day of class) Obviously this is not graded. The purpose is to help us put together good teams. **Do it now please**
-
+* How will the whole term work? Let's look at the <%= link_to_background :term_overview %> 
+* How will the lab work? Does it have it's own grade? <%= link_to_background :lab_overview %>
+* Let's look at the <%= link_to_background :grading %>
 * How will the projects work? <%= link_to_background :project_process %>
 
-##### Working in teams
+#### Working in teams
 
 * Working in teams can suddenly become CHALLENGING
 * You are not trying to become best friends, you are trying to get something done
