--- a/lectures/iter1/01_welcome.md.erb
+++ b/lectures/iter1/01_welcome.md.erb
@@ -23,16 +23,14 @@ type: page
 * <%= discussion "How is it diffent (or is it different) from Computer Science?" %>
 * <%= link_to_background :learning_objectives %>
 
-##### Overview and course web site
-
-* How will the whole term work? Let's look at the <%= link_to_background :term_overview %> 
-* How will the lab work? Does it have it's own grade? <%= link_to_background :lab_overview %>
-* Let's look at the <%= link_to_background :grading %>
-
 ##### Exercise
 * Pair up with person next to you
 * Look through the whole course web site and discuss it with your partner
 * Each pair asks a question about the curriculum or anything else.
+
+#### Putting together teams
+
+To help in organizing the teams, I am asking everyone to *really quickly* Fill in [Skills Inventory](https://docs.google.com/spreadsheet/ccc?key=0Avr8qvL1EWecdENZQkpxQ2V2dEVjbjNaS3NzRjZ0UGc#gid=0). (This page is protected until the day of class) Obviously this is not graded. The purpose is to help us put together good teams. **Do it now please**
 
 ##### Programming Assignments
 * Answer questions about programming assignments - see <%= link_to_pa :intro_pa %>
