update tdd lecture and add code samples

--- a/lectures/iter1/02_ruby.md.erb
+++ b/lectures/iter1/02_ruby.md.erb
@@ -2,7 +2,8 @@
 title: Ruby Part One
 type: page
 ---
-#### Homework Due For Today
+#### Homework due for today
+
 * Learn about Git and Github, create your personal github account
 * Continue working on <%= link_to_pa :PA1 %>
 * <%= deliverable "Check in your PA1 so far into Github" %>
@@ -14,18 +15,10 @@ type: page
 * Let's look at the <%= link_to_background :grading %>
 * How will the projects work? <%= link_to_background :project_process %>
 
-#### Working in teams
-
-* Working in teams can suddenly become CHALLENGING
-* You are not trying to become best friends, you are trying to get something done
-* A significant part of your grade will depend on how well your team functions
-* Each member of the team is responsible for their own work and for the welbeing of the team
-* Triangle Exercise
-* Discussion about teams
 
 #### Ruby Live Coding Demonstration
  
-<%= include_ruby_code :intro_tut %>
+<%= include_ruby :intro_tut %>
 
 #### Next Class
-* Look at homework: <%= link_to_lecture :ruby2 %> 
+* Look at homework: <%= link_to_lecture :project_select %> 
