--- a/lectures/iter1/04_ruby2.md.erb
+++ b/lectures/iter1/04_ruby2.md.erb
@@ -2,23 +2,20 @@
 title: More Ruby
 type: page
 ---
-#### Homework for today
+#### Homework due for today
+
 * Read Chapter 4 (Introduction to Ruby) in AWDR. It will be a good review of what you've worked on so far. I am sure you will find some new insights and goodies there. Try out code examples from the book. 
 * Research what Ruby Gems are. Experiment with some code. Research Bundler (a ruby utilty.) Experiment with it. <%= deliverable "Write a blog post explaining what you learned." %>
-* <%= deliverable "Programming Assignment 1" %> L(ook at <%= link_to_pa :PA1 %> for details)
+* <%= deliverable "Check in your PA2 so far into Github" %>
 
 ##### Ruby Gems
 * Package Management
 * Ruby Gems
 * Ruby Bundler
 
-##### Programming Assignments
-* Discuss <%= link_to_pa :PA1 %>
-* Introduce <%= link_to_pa :PA2 %>
-
 #### Ruby Live Coding Demonstration and discussion
 
-<%= include_ruby_code :classes_tut %>
+<%= include_ruby :classes_tut %>
 
 #### Next Class
-* Look at homework: <%= link_to_lecture :project_select %> 
+* Look at homework: <%= link_to_lecture :url_intro %> 
