--- a/lectures/iter1/06_iter1_done.md.erb
+++ b/lectures/iter1/06_iter1_done.md.erb
@@ -2,12 +2,9 @@
 title: Iteration 1 Presentations
 ---
 ##### Homework due for today
-* Work on Programming Assignment 3, <%= link_to_pa :PA3 %>
-* Team Checkpoint presentations.
-	* What is the product
-	* Who is the team
-	* What is the original batch of stories
-	* 5-10 minutes
+* Work on Programming Assignment 3, <%= link_to_pa :PA3 %>. <%= deliverable "Check in your progress to date into Github" %>
+* Team Checkpoint presentations. Cover: What is your product, what are your first sets of stories, what is your vision for your project, how you will work as a team, where you think things will be challenging and how you plan to do their work."what is the product.
+	* <%= team_deliverable "All four members of the team should participate in a 5-10 minute presentation" %>
 
 #### Presentations
 
