--- a/lectures/iter2/01_rails_intro.md.erb
+++ b/lectures/iter2/01_rails_intro.md.erb
@@ -9,6 +9,7 @@ type: page
 * Work on Programming Assignment 3 (See <%= link_to_pa :PA3 %>)
 
 ##### Quick Intro to Rails
+* So what is Rails, really? It's a library of Ruby code, that's all
 * I will do a live demo of the Instant Gratification session
 * [Here is a shell recording of the session](http://showterm.io/cb6c881188f6deb1845a9)
 
