--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -11,3 +11,4 @@ type: page
 * [Rubular for Regular Expressions](http://rubular.com)
 * [Architecture, The Lost Years](https://www.youtube.com/watch?v=WpkDN78P884&feature=player_embedded)
 * [Rails Guide about Routing](http://guides.rubyonrails.org/routing.html)
+* [Let Me Google That For you](http://lmgtfy.com)
