--- a/lectures/iter1/01_welcome.md.erb
+++ b/lectures/iter1/01_welcome.md.erb
@@ -2,7 +2,7 @@
 title: Welcome
 type: page
 ---
-##### Homework due for today
+#### Homework due for today
 
 <%= bold_red "Note for first day of class:" %> Each day of class has a page on this web site. The first section of that page is always the homework due on that very day. So in other words, the homework listed here is actually "pre-work" for day one. We will go over this in a little more detail during class.
 
