--- a/lectures/iter1/05_url_intro.md.erb
+++ b/lectures/iter1/05_url_intro.md.erb
@@ -9,6 +9,10 @@ type: page
 * Meet outside of class for 1 hour with 3 other students, look through and discuss the project options. Discuss discuss discuss.
 * <%= deliverable "Programming Assignment 2" %> (Look at <%= link_to_pa :PA2 %> for details)
 
+##### Programming Assignments
+* Discuss <%= link_to_pa :PA2 %>
+* Introduce <%= link_to_pa :PA3 %>
+
 #### Discussion
 * Go around room, and each student says the next step of URL processing.
 
