--- a/lectures/iter2/02_db_design.md.erb
+++ b/lectures/iter2/02_db_design.md.erb
@@ -2,23 +2,17 @@
 title: Database Design
 type: page
 ---
-##### Homework due for today
+<%= homework_hdr %>
 * Read and and try to understand Martin Fowler's [ORM Hate](http://martinfowler.com/bliki/OrmHate.html)
 * Do research on the "Active Record Pattern". Here are some links to start with
 	* Martin Fowler's [Active Record Pattern](http://www.martinfowler.com/eaaCatalog/activeRecord.html)
 	* [Wikipedia on ActiveRecord](http://en.wikipedia.org/wiki/Active_record_pattern)
-* Product Teams: develop preliminary schema for your product. <%= team_deliverable "Detailed initial schema for your product. Any form you want." %>
-* Complete and hand submit Programming Assignment 3 (<%= link_to_pa :PA3 %>)
+* Read [Basics of good database design in Web Development](http://www.onextrapixel.com/2011/03/17/the-basics-of-good-database-design-in-web-development/) - thank you Deema!
+* Product Teams: Using all that background, develop initial schema for your product. Include table names, field or attribute names, and relations or joins. <%= team_deliverable "Detailed initial schema for your product. Any form you want." %>
+* Complete Programming Assignment 3 (<%= link_to_pa :PA3 %>) <%= deliverable "PA3 in github and screencast of you demoing it. Post both links in Piazza as your submission." %>
 
-##### Object Relational Mapping
 
-* "Impendance misatch"
-* Different approaches
-* Key question is how you correlate the tables in a database with the attributes of a class
-* The "ActiveRecord" Object Oriented Pattern
+<%= include_topic :data_modeling %>
 
-##### Relational Databases
-
-* How Relational Databases work
-* Tables, Columns, Databases, Joins
-* Look at a real example
+#### Next Class
+* Review Homework: <%= link_to_lecture :tdd %>
