improve vagrant setup

--- a/background/09_links_of_interest.md.erb
+++ b/background/09_links_of_interest.md.erb
@@ -12,3 +12,6 @@ type: page
 * [Architecture, The Lost Years](https://www.youtube.com/watch?v=WpkDN78P884&feature=player_embedded)
 * [Rails Guide about Routing](http://guides.rubyonrails.org/routing.html)
 * [Let Me Google That For you](http://lmgtfy.com)
+* [MiniTest::Spec tutorial](http://www.rubyinside.com/a-minitestspec-tutorial-elegant-spec-style-testing-that-comes-with-ruby-5354.html)
+* [Minitest Quick Reference](http://mattsears.com/articles/2011/12/10/minitest-quick-reference)
+* [Rails Testing Pyramid](http://blog.codeclimate.com/blog/2013/10/09/rails-testing-pyramid/)
