--- a/cribsheets/08_vagrant_setup.md.erb
+++ b/cribsheets/08_vagrant_setup.md.erb
@@ -8,8 +8,8 @@ type: page
 
 ####How to setup Vagrant
 
-Before installing Vagrant you should have one provider installed. For this course we recommend you to use [VirtualBox](https://www.virtualbox.org/). After VirtualBox is installed (if you are using Windows make sure that you restart after installation completes), download [the provided Vagrant box](http://goo.gl/5H4Jrn) and follow the steps below:
-
+1. Before installing Vagrant you should have one provider installed. For this course we recommend you to use [VirtualBox](https://www.virtualbox.org/). 
+1. After VirtualBox is installed (if you are using Windows make sure that you restart after installation completes), download [the provided Vagrant box](http://goo.gl/5H4Jrn)
 1. Download Vagrant from [here](http://www.vagrantup.com/downloads.html)
 2. Install it and make sure that you can run `vagrant` from your terminal (on windows run it in command prompt, and on OS X run it in Terminal app)
 3. If you are using Windows, restart your computer after Vagrant installation completes.
