--- a/lectures/iter2/03_tdd.md.erb
+++ b/lectures/iter2/03_tdd.md.erb
@@ -5,6 +5,7 @@ type: page
 <%= homework_hdr %>
 * Read [MiniTest::Spec tutorial](http://www.rubyinside.com/a-minitestspec-tutorial-elegant-spec-style-testing-that-comes-with-ruby-5354.html)
 * Read [Minitest Quick Reference](http://mattsears.com/articles/2011/12/10/minitest-quick-reference)
+* Read [Rails Testing Pyramid](http://blog.codeclimate.com/blog/2013/10/09/rails-testing-pyramid/)
 * Using the above, write a Ruby program that defines a method add(x, y) and a single test that checks that add actually does an addition. Create a github repo with your solution <%= deliverable "Post the link to the repo in github" %>
 
 #### Test Driven Development
