add tradeassistant, and clean up some lectures

--- a/lab/01_lab_setup.md.erb
+++ b/lab/01_lab_setup.md.erb
@@ -2,14 +2,17 @@
 title: Setup Lab
 type: page
 ---
-##### Homework required for this lab
+<%= homework_hdr %>
 * Setup and configure your Vagrant shell: <%= link_to_cribsheet :vagrant_setup %>
 * Learn Git and Github. I suggest reading Chapter 1 and 2 of [The Git Book](http://git-scm.com/book). 
 * Also take a look at our own <%= link_to_cribsheet :git %>. You will find helpful info and several other links.
 * Practice your Unix command line: <%= link_to_cribsheet :unix_shell %>
 * Begin work on <%= link_to_pa :PA1 %>. Bring in as much as you have so far.
 
-##### Lab Objectives
+###Note: 2 students to one computer
+
+#### Lab Objectives
+
 * Setup and play and get used Vagrant
 * Play and learn about using the unix command line
 * Create a Github account and experiment
