--- a/lectures/iter1/03_project_select.md.erb
+++ b/lectures/iter1/03_project_select.md.erb
@@ -5,6 +5,7 @@ type: page
 #### Homework due for today
 
 * Look through and think about the Product Options that are available. Remember the caveat: Don't set the bar at "this is the most wonderful product idea I ever saw". Set it at "this is a product that could be interesting to develop and work on." <%= deliverable "A blog post with your top 2" %>
+* Meet outside of class for 1 hour with 3 other students, look through and discuss the project options. Discuss discuss discuss.
 * <%= deliverable "Programming Assignment 1" %> (Look at <%= link_to_pa :PA1 %> for details)
 
 #### Programming Assignments
