--- a/lab/02_lab_rubypractice.md.erb
+++ b/lab/02_lab_rubypractice.md.erb
@@ -1,14 +1,12 @@
 ---
-title: Install Lab
+title: Ruby Practice Lab
 type: page
 ---
-##### Homework required for this lab
+<%= homework_hdr %>
 * You must have your Vagrant VM, Ruby and Rails working by now. Get help if you don't
 * Read AWDR Chapter 1, although the VM will have everything set up for you
 
 ##### Lab Objectives
 * Product Selection discussion and preliminary choosing of teams
-^
-* Install and do Hello World with Rails
-* Play around with it
-* PA1 and PA2
+* Look for a cool gem and try it out in a test ruby program
+* Work on PA1 and PA2
