--- a/lab/03_lab_pa2_pa3.md.erb
+++ b/lab/03_lab_pa2_pa3.md.erb
@@ -2,6 +2,12 @@
 title: PA2 and PA3 Lab
 type: page
 ---
-* Review PA2
-* Introduce PA3
-* Debugging with Pry
+<%= homework_hdr %>
+
+* Make significant progress on PA3
+* Make sure that PA2 is done
+
+#### Lab Objectives
+* One or more students present their solutions to PA2
+* One or more students show their progress so far on PA3
+* Learn to debugging with Pry
