--- a/lectures/iter1/04_ruby2.md.erb
+++ b/lectures/iter1/04_ruby2.md.erb
@@ -5,13 +5,16 @@ type: page
 #### Homework due for today
 
 * Read Chapter 4 (Introduction to Ruby) in AWDR. It will be a good review of what you've worked on so far. I am sure you will find some new insights and goodies there. Try out code examples from the book. 
-* Research what Ruby Gems are. Experiment with some code. Research Bundler (a ruby utilty.) Experiment with it. <%= deliverable "Write a blog post explaining what you learned." %>
+* Research what Ruby Gems are. Experiment with some code. Research Bundler (a ruby utilty.) Experiment with Bundler. <%= deliverable "Write a blog post explaining what you learned." %>
 * <%= deliverable "Check in your PA2 so far into Github" %>
 
-##### Ruby Gems
+#### Ruby Gems
 * Package Management
 * Ruby Gems
 * Ruby Bundler
+
+#### Project Selection and team formation
+* Discussion / Brainstorm
 
 #### Ruby Live Coding Demonstration and discussion
 
