--- a/lectures/iter1/02_ruby.md.erb
+++ b/lectures/iter1/02_ruby.md.erb
@@ -6,7 +6,7 @@ type: page
 
 * Learn about Git and Github, create your personal github account
 * Continue working on <%= link_to_pa :PA1 %>
-* <%= deliverable "Check in your PA1 so far into Github" %>
+* <%= deliverable "Check in your PA1 so far into Github and post the link into piazza. Remember to number it 2-1!" %>
 
 #### Overview and course web site
 
