support collapsable and styled columns

--- a/lab/02_lab_install.md.erb
+++ b/lab/02_lab_install.md.erb
@@ -1,6 +1,7 @@
 ---
 title: Install Lab
 type: page
+css_class: red bold
 ---
 ##### Homework required for this lab
 * You must have your Vagrant VM, Ruby and Rails working by now. Get help if you don't
