small change to se practices

--- a/background/11_se_practices.md.erb
+++ b/background/11_se_practices.md.erb
@@ -1,6 +1,7 @@
 ---
 title: Software Engineering Practices
 type: page
+css_class: red bold
 ---
 This page outlines the Software Engineering practices that you will be required to learn and follow for this course.
 
@@ -39,6 +40,8 @@ This page outlines the Software Engineering practices that you will be required 
 1. Variables are all lowercase, with _ to break words, "Snake Case", e.g. initial_speed
 
 1. Contants are all UPPERCASE
+
+1. Set tab to 4 spaces
 
 
 #### Following these practices is part of your grade :)
