reorg iter 2; add new chapter to read; other stuff

--- a/background/11_se_practices.md.erb
+++ b/background/11_se_practices.md.erb
@@ -25,6 +25,13 @@ This page outlines the Software Engineering practices that you will be required 
 
 ##### Ruby Programming
 
+1. Set tab to 4 spaces
+
+1. Put your name at the top of every source file
+<%= ruby_begin %>
+# author: Pito Salas
+<%= ruby_end %>
+
 1. Use no $global variables
 
 1. No methods longer than 12 lines
@@ -41,7 +48,6 @@ This page outlines the Software Engineering practices that you will be required 
 
 1. Contants are all UPPERCASE
 
-1. Set tab to 4 spaces
 
 
 #### Following these practices is part of your grade :)
