--- a/lab/02_lab_rubypractice.md.erb
+++ b/lab/02_lab_rubypractice.md.erb
@@ -1,6 +1,5 @@
 ---
 title: Ruby Practice Lab
-type: page
 css_class: red bold
 ---
 <%= homework_hdr %>
@@ -8,6 +7,7 @@ css_class: red bold
 * Read AWDR Chapter 1, although the VM will have everything set up for you
 
 ##### Lab Objectives
-* Product Selection discussion and preliminary choosing of teams
+* Discuss <%= link_to_pa :PA1 %>
+* Introduce <%= link_to_pa :PA2 %>
+* Product Selection discussion as needed
 * Look for a cool gem and try it out in a test ruby program
-* Work on PA1 and PA2
