--- a/lectures/iter1/03_project_select.md.erb
+++ b/lectures/iter1/03_project_select.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Project Selection
-type: page
+css_class: bold
 ---
 #### Homework due for today
 
@@ -8,29 +8,20 @@ type: page
 * Meet outside of class for 1 hour with 3 other students, look through and discuss the project options. Discuss discuss discuss.
 * <%= deliverable "Programming Assignment 1" %> (Look at <%= link_to_pa :PA1 %> for details)
 
-#### Programming Assignments
-* Discuss <%= link_to_pa :PA1 %>
-* Introduce <%= link_to_pa :PA2 %>
+#### Secret Guest
+* Daniel leads fun and games
 
 #### Product Discussion
 * Sales pitches for products (Pito and any other students)
 * How close to the writeup will the product have to be?
 * Do we have to use ruby on rails? (yes)
 
-#### Working in teams
-
-* Working in teams can suddenly become CHALLENGING
-* You are not trying to become best friends, you are trying to get something done
-* A significant part of your grade will depend on how well your team functions
-* Each member of the team is responsible for their own work and for the welbeing of the team
-* Triangle Exercise
-* Discussion about teams
-
 #### Team Discussion
-* Review <%= link_to_background :project_process %>
-* <%= link_to_topic :working_in_teams %>
+* *Important*, let's review: <%= link_to_topic :working_in_teams %>
+* A significant part of your grade will depend on how well your team functions
 * Teams will be 4 people (rounding as needed)
 
-#### Next Class
-* Look at homework: <%= link_to_lecture :ruby2 %> 
+#### Next Lab and Class
+* Next Lab is: <%= link_to_lab :lab_rubypractice %>
+* Look at homework: <%= link_to_lecture :ruby2 %>
 
