--- a/lectures/iter2/04_tdd.md.erb
+++ b/lectures/iter2/04_tdd.md.erb
@@ -37,3 +37,8 @@ type: page
 
 <%= include_ruby :tdd2_tut %>
 
+* What is the role of data in developing tests for your application
+* Some ways of thinking about test data
+* Avoiding Brittle tests
+
+
